# workflow-build-index

./: .releaserc  Dockerfile  README.md  fixtures.py  mise.toml  pyproject.toml  setup.py  utils.py  workflow.py
.github/: dependabot.yaml
.github/workflows/: CI.yml  ci.yaml  ci.yml  dockerhub.yml  publish.yml
tests/: Dockerfile  docker-compose.yml  test_utils.py  test_workflow.py
tests/__snapshots__/: test_utils.ambr
tests/snapshots/: snap_test_utils.py
tests/test_utils/: barcode.yml  sequences_barcode.yml  sequences_genome.yml  test_write_sequences_to_file.txt
virtool-workflow/: fixtures.py
