[tool.poetry]
name = "workflow-build-index"
version = "0.0.0"
description = "A workflow for building Virtool reference indexes"
authors = ["Ian Boyes", "Blake Smith", "Tiensheng Sui"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
virtool-workflow = "^7.1.0"
setuptools = "^70.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.6.1"
syrupy = "^4.6.0"
ruff = "^0.4.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
