[project]
name = "workflow-build-index"
version = "0.0.0"
description = "A workflow for building Virtool reference indexes"
authors = [
    { name = "Ian Boyes"},
    { name = "Blake Smith" },
    { name = "Tiensheng Sui" }
]
license = "MIT"
requires-python = ">=3.12.3,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
virtool-workflow = ">=7.1.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2"
pytest-asyncio = ">=0.23.3"
pytest-mock = ">=3.6.1"
syrupy = ">=4.6.0"
ruff = ">=0.4.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
