[project]
name = "workflow-build-index"
version = "0.1.0"
readme = "README.md"
description = "A workflow for building Virtool reference indexes"
authors = [
    { name = "Ian Boyes"},
    { name = "Blake Smith" },
    { name = "Tiensheng Sui" },
    { name = "Christine Wong Chong" },
    { name = "Markus Swoveland" },
    { name = "Matt Curtis" }
]
license="MIT"
requires-python = ">=3.13.7,<3.14.0"

dependencies = [
    "virtool",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.11",
    "syrupy>=4.9.1",
    "ty>=0.0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[tool.uv.sources]
virtool = { git = "https://github.com/virtool/virtool", tag = "31.11.3" }
